# blockdata

./: .env.example  .gcloudignore-mage  .gitignore  .tmp-refactor-issues.json  .tmp-refactor-snippets.json  .tmp-refactor-verification.json  .vale.ini  AGENTS.md  CLAUDE.md  HANDOFF.md  PLAN.md  README.md  _ark_example_virtualized_select.html  _ark_select_docs.html  _ark_sitemap.xml  _deleted_theme_classes_current.txt  _dock_classes.txt  _flow_canvas_classes.txt  _kestra_dashboard.css  _kestra_flows.css  _kestra_home.html  _kestra_index.css  _overlap_theme_schema.txt  _schema_classes.txt  _theme_classes.txt  _theme_classes_unreferenced_anywhere.txt  _theme_css.diff  braintrust-dev-app-org-level-p-project-level--2026-03-28T19-15-11-189Z.json  braintrust-dev-app-org-level-p-project-level-configuration-general--2026-03-28T19-24-58-950Z.json  changelog.jsonl  cloudbuild.yaml  development-plan.md  generate_0209_table.ps1  kestra-phase2-plan.md  kestra-plan-assessment.md  kestra-status-report.md  package-lock.json  package.json  repo-changelog.jsonl  repo-rules.jsonl  (+15 more)
_agchain/legal-10/: README.md  package.json  pyproject.toml  requirements.txt  vercel.json
_agchain/legal-10/docs/: _INDEX.md
_agchain/legal-10/scripts/: bundle_categorize_and_dedupe.py  check_duckdb_open.py  databricks_legal10_parquet_sanity.py  dedupe_parquet_exports.py  duckdb_inventory.py  eu_builder.py  export_duckdb_to_parquet.py  inventory_datasets.py  langfuse_dataset_from_export.py  materialize_export_bundle.py  (+3 more)
services/pipeline-worker/: Dockerfile  openapi.json  pyproject.toml  requirements.txt
(+7060 files in other folders)
